Min-height avoids scrolling. Scrolling happens because cell text is too short

--- a/core/src/main/web/app/styles/cells.scss
+++ b/core/src/main/web/app/styles/cells.scss
@@ -23,6 +23,10 @@
     padding-top: $grid-row-height;
 }
 
+.CodeMirror-scroll {
+    min-height: 28px;
+}
+
 .advanced-mode .bkcell .CodeMirror {
   padding-top: 0;
 }
